# Axiomatic-Bridge-Worlds

./: .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DISCLOSURE.md  EVALUATION.md  Makefile  README.md  REUSE.toml  SECURITY.md  pyproject.toml  setup.py
LICENSES/: MIT.txt
abw_core/: __init__.py  __main__.py  benchmark.py  benchmark_reporting.py  cli.py  config.py  ir.py  packager.py  serde.py  session.py  typecheck.py
abw_core/dsl/: __init__.py  grammar.ebnf  lexer.py  parser.py  printer.py
abw_core/generator/: __init__.py  (+5 more)
configs/: README.md  cross_track_few_shot_exemplars_seeded_v2.json  formal_direct_few_shot_exemplars_seeded_v2.json  mvp.yaml  natural_language_direct_few_shot_exemplars_seeded_v2.json  paper_core.yaml  paper_core_seeded_v2.yaml
dataset/: README.md
docs/: architecture.md  benchmark_task.md  dsl.md  family_cards.md  index.md  project_concepts.md  repository_layout.md  scoring.md  seeded_v2_cleanup_manifest.md  structured_artifacts.md  workflows.md
examples/: README.md
scripts/: README.md  audit_dataset_diversity.py  build_few_shot_exemplar_bank.py  build_paired_difficulty_dataset.py  difficulty_shape_summary.py  example_target_system.py  export_public_dataset.py  generate_dataset.py  generate_perturbed_dataset.py  generic_model_target.py  inspect_world.py  install_seeded_v2_dataset.py  model_target.py  render_benchmark_report.py  retry_failed_invocations.py  robustness_plan.py  robustness_summary.py  run_benchmark.py  run_experiment.py  score_candidate.py  validate_dataset.py
tests/: README.md
(+83 files in other folders)
