# SPDX-FileCopyrightText: Copyright © 2026 Idiap Research Institute <contact@idiap.ch>
#
# SPDX-FileContributor: Andre Freitas <andre.freitas@idiap.ch>
# SPDX-FileContributor: Margarita Sharkova <margarita.sharkova@idiap.ch>
# Neuro-symbolic AI Group
#
# SPDX-License-Identifier: MIT

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "axiomatic-bridge-worlds"
version = "0.1.0"
description = "Synthetic benchmark and evaluation harness for theory formation via hidden bridge concept recovery."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSES/*.txt"]
keywords = [
  "benchmark",
  "reasoning",
  "symbolic-ai",
  "theorem-proving",
  "evaluation",
  "dataset-generation",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Testing",
]
dependencies = [
  "PyYAML>=6.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0",
]
validation = [
  "cvc5>=1.3.3",
  "z3-solver>=4.16.0.0",
]

[project.scripts]
abw = "abw_core.cli:main"

[tool.setuptools.packages.find]
include = ["abw_core*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
